initial angular setup

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <!doctype html>
 
 <!-- ASSIGN OUR ANGULAR MODULE -->
-<html ng-app="scotchTodo">
+<html ng-app="foods">
 <head>
     <!-- META -->
     <meta charset="utf-8">
