next button to update random food

--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,8 @@
 <body ng-controller="mainController">
   
  <h1>How about having some {{ currentfood }}</h1>
+  
+  don't like it?  <a ng-click="next()">next then</a>
 
 </body>
 </html>
