next button to update random food

--- a/public/index.html
+++ b/public/index.html
@@ -15,12 +15,12 @@
     <script src="/js/main.js"></script>
 
 </head>
-<!-- SET THE CONTROLLER AND GET ALL TODOS -->
+
 <body ng-controller="mainController">
   
  <h1>How about having some {{ currentfood }}</h1>
   
-  don't like it?  <a ng-click="next()">next then</a>
+  don't like it?  <a href="" ng-click="next()">next then</a>
 
 </body>
 </html>
