--- a/public/index.html
+++ b/public/index.html
@@ -14,14 +14,17 @@
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.8/angular.min.js"></script><!-- load angular -->
     <script src="/js/main.js"></script>
 
+  <link rel="stylesheet" href="/css/all.css"/>
 </head>
 
 <body ng-controller="mainController">
   
- <h1>How about having some {{ currentfood }}</h1>
-  
+<h1>How about having some {{ currentfood }}
+<span> 
   don't like it?  <a href="" ng-click="next()">next then</a>
-
+</span>
+</h1>
+ 
 </body>
 </html>
   
