--- a/public/index.html
+++ b/public/index.html
@@ -18,13 +18,13 @@
 </head>
 
 <body ng-controller="mainController">
-  
-<h1>How about having some {{ currentfood }}
-<span> 
-  don't like it?  <a href="" ng-click="next()">next then</a>
-</span>
-</h1>
- 
+ <h1 class="opaque">How about having some {{ currentfood }}
+ </h1>
+ <div ng-click="next()"> 
+  don't like it?  <br/>
+  <a href="" ng-click="next()">next one, please</a>
+</div>
+
 </body>
 </html>
   
