initial db integration

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body ng-controller="mainController">
- <h1 class="opaque">How about having some {{ currentfood }}
+ <h1 class="opaque">How about having some {{ currentfood.name }}
  </h1>
  <div ng-click="next()"> 
   don't like it?  <br/>
