remove double event

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
  </h1>
  <div ng-click="next()"> 
   don't like it?  <br/>
-  <a href="" ng-click="next()">next one, please</a>
+  <a href="">next one, please</a>
 </div>
 
 </body>
