--- a/public/index.html
+++ b/public/index.html
@@ -27,41 +27,30 @@
 </head>
 
 <body ng-controller="mainController">
-<div class="container-fluid">
+<div class="container-fluid pad">
   <div class="row">
     <div class="col-xs-1"> 
     <br/>  
     </div>
   </div>
-  <div class="row">
-    <div class="col-xs-1">  
-    </div>
-  <div class="col-xs-10 opaque">
-     <h1 class="text-center">How about having some {{ currentfood.name }}
-     </h1>
-    <div class="col-xs-1">  
+  <div class="row pad">
+    <div class="col-xs-12 opaque">
+       <h1 class="text-center">How about having some {{ currentfood.name }}
+       </h1>
     </div>
   </div>
-</div>
-<div class="row">
-      <div class="col-xs-1"> 
-        <br/>  
-</div>
-</div>
   <div class="row">
-    <div class="col-xs-2">  
+    <div class="col-sm-6 column">
+      <div class="next btn wide" ng-click="next()">
+        don't like it?  <br/>
+        <a href="">next one, please</a>
+      </div>
     </div>
-    <div class="col-xs-3 next btn" ng-click="next()">
-      don't like it?  <br/>
-      <a href="">next one, please</a>
-    </div>
-    <div class="col-xs-2">  
-    </div>
-    <div class="col-xs-3 add btn" ng-click="addFood()"> 
+    <div class="col-sm-6 column"> 
+      <div class="add btn wide" ng-click="next()">
       don't see it?  <br/>
       <a href="">add one food</a>
-    </div>
-    <div class="col-xs-2">  
+      </div>
     </div>
   </div>
 </div>
