--- a/public/index.html
+++ b/public/index.html
@@ -1,24 +1,16 @@
-<!-- index.html -->
-<!doctype html>
-<!-- ASSIGN OUR ANGULAR MODULE -->
-<html lang="en" ng-app="foods">
+<!doctype html><html lang="en" ng-app="foods">
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1"><!-- Optimize mobile viewport -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>The whattoeat App</title>
 
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script><!-- load jquery -->
-    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.8/angular.min.js"></script><!-- load angular -->
-    
-
-<!-- Latest compiled and minified CSS -->
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.8/angular.min.js"></script>    
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
 
-<!-- Optional theme -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css">
 
-<!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 
 <script src="/js/main.js"></script>
@@ -26,19 +18,18 @@
 
 </head>
 
-  <a name="home"/>
   
 <body ng-controller="mainController">
 
 <div class="container-fluid">
-<nav class="navbar navbar-top">
+<nav id="home" class="navbar navbar-top">
     <div class="navbar-header">
       <a class="navbar-brand" href="#">the whattoeat app</a>
     </div>
     <div>
       <ul class="nav navbar-nav">
-        <li><a href="#home">Home</a></li>
         <li><a href="#why">Why</a></li>
+        <li><a href="#code">Code</a></li>
       </ul>
    </div>
 </nav>      
@@ -80,8 +71,7 @@
     </div>
   </div>
 
- <div class="row pad">
-    <a name="home"/>
+ <div id="why" class="row pad">
     <div class="col-xs-12 opaque">
        <h1 class="text-center">why
        </h1>
@@ -99,6 +89,16 @@ Hope you like it.
       </p>
 
     
+    </div>
+  </div>
+
+   <div id="code" class="row pad">
+    <div class="col-xs-12 opaque">
+       <h1 class="text-center">Code</h1>
+       <p>
+This app is simple .js code. You can find it in: 
+        <li><a href="https://github.com/anttitevanlinna/whattoeat">https://github.com/anttitevanlinna/whattoeat</a></li>. Additionally, a Hekoku account, Travis CI, and a small MongoDb is used. 
+      </p>
     </div>
   </div>
 
