--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,7 @@
         <ul class="nav navbar-nav">
           <li><a href="#why">Why</a></li>
           <li><a href="#code">Code</a></li>
+          <li><a href="#backlog">The todo list</a></li>
         </ul>
      </div>
   </nav>      
@@ -98,6 +99,19 @@ This app is simple .js code. You can find it in:
       </p>
     </div>
   </div>
+
+    <div id="backlog" class="row pad">
+    <div class="col-xs-12 opaque">
+       <h1 class="text-center">The todos</h1>
+        <ul class="">
+          <li>Auht with FB to know who added what</li>
+          <li>Yep - I'll have this button</li>
+          <li>Simple logic to prefer some foods over others</li>
+          <li>Admin so that I can moderate (remove) the stinking foods</li>
+        </ul>
+      </div>
+  </div>
+
   </div>
 </body>
 </html>
