--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css">
 
+<script src="/js/angular-fb.js"></script>
 <script src="/js/main.js"></script>
 <link rel="stylesheet" href="/css/all.css"/>
 
@@ -34,7 +35,7 @@
   </nav>      
   
   <div class="row">
-    <div class="col-xs-1"> 
+    <div class="col-xs-12"> 
       <br/>  
     </div>
   </div>
@@ -63,10 +64,19 @@
           <span class="help-block"></span>
         </div>
 
-        <button type="submit" class="btn btn-success btn-lg btn-block" ng-click="add()">
+        <button type="submit" class="btn btn-success btn-lg btn-block" ng-click="add()" ng-show="loginStatus == 'connected'">
            Submit
         </button>
+        <button type="submit" class="btn btn-success btn-lg btn-block" ng-click="login()" ng-hide="loginStatus == 'connected'">
+           Login
+        </button>
         </form>
+        
+        <button type="button" id="remove_auth" ng-click="removeAuth()">remove auth</button>
+        <pre>isReady: <span id="is_ready" ng-bind="facebookIsReady"></span></pre>
+        <pre>status: <span id="login_status" ng-bind="loginStatus"></span></pre>
+        <pre>username: <span id="api_first_name" ng-bind="user.first_name"></span></pre>     
+
       </div>
     </div>
   </div>
