--- a/public/index.html
+++ b/public/index.html
@@ -42,41 +42,44 @@
   <div class="row pad">
     <div class="col-xs-12 opaque">
        <h1 class="text-center">How about having some <span ng-bind="currentfood.name">...food</span>
+         <small>
+         <span ng-hide="currentfood.creator == undefined">
+           (Added by <span ng-bind="currentfood.creator"></span>)
+         </span>
+         </small>
        </h1>
     </div>
   </div>
   <div class="row">
     <div class="col-sm-6 column">
       <div class="next btn wide" ng-click="next()">
-        <b>don't like it?<b/>  
-        <br/>
+        <form>
+          <label>Don't like it?</label>
         <button type="submit" class="btn btn-success btn-lg btn-block">
            Next...
         </button>
+        </form>
       </div>
     </div>
     <div class="col-sm-6 column"> 
       <div class="add btn wide">
         <form>
-        <div id="food-group" class="form-group">
-          <label>Don't see your favorite? Add it here</label>
-          <input type="text" name="food" class="form-control" placeholder="Mac and Cheese">
-          <span class="help-block"></span>
+          <div id="food-group" class="form-group">
+            <label ng-show="loginStatus != 'connected'">Don't see your favorite? Add it here</label>
+            <label ng-show="loginStatus == 'connected'">
+              <span ng-bind="user.first_name"></span>, 
+              your food will be credited to your name
+            </label>
+            <input type="text" name="food" class="form-control" placeholder="Mac and Cheese">
         </div>
-
+  
+          <button type="submit" class="btn btn-success btn-lg btn-block" ng-click="login()" ng-hide="loginStatus == 'connected'">
+            Login with Facebook first
+        </button>
         <button type="submit" class="btn btn-success btn-lg btn-block" ng-click="add()" ng-show="loginStatus == 'connected'">
            Submit
         </button>
-        <button type="submit" class="btn btn-success btn-lg btn-block" ng-click="login()" ng-hide="loginStatus == 'connected'">
-           Login
-        </button>
         </form>
-        
-        <button type="button" id="remove_auth" ng-click="removeAuth()">remove auth</button>
-        <pre>isReady: <span id="is_ready" ng-bind="facebookIsReady"></span></pre>
-        <pre>status: <span id="login_status" ng-bind="loginStatus"></span></pre>
-        <pre>username: <span id="api_first_name" ng-bind="user.first_name"></span></pre>     
-
       </div>
     </div>
   </div>
