--- a/public/index.html
+++ b/public/index.html
@@ -77,7 +77,7 @@
             Login with Facebook first
         </button>
         <button type="submit" class="btn btn-success btn-lg btn-block" ng-click="add()" ng-show="loginStatus == 'connected'">
-           Submit
+           Add
         </button>
         </form>
       </div>
@@ -117,8 +117,8 @@ This app is simple .js code. You can find it in:
     <div class="col-xs-12 opaque">
        <h1 class="text-center">The todos</h1>
         <ul class="">
-          <li>Auht with FB to know who added what</li>
           <li>Yep - I'll have this button</li>
+          <li>Make it work with the bloody ie</li>
           <li>Simple logic to prefer some foods over others</li>
           <li>Admin so that I can moderate (remove) the stinking foods</li>
         </ul>
