--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,9 @@
     <title>The whattoeat App</title>
 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.8/angular.min.js"></script> <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular-route.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
    
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css">
@@ -28,97 +30,12 @@
           <li><a href="#home">The whattoeat app</a></li>
           <li><a href="#why">Why</a></li>
           <li><a href="#code">Code</a></li>
-          <li><a href="#backlog">Todo list</a></li>
         </ul>
      </div>
   </nav>      
+
+  <div ng-view></div>
   
-  <div class="row pad">
-    <div class="col-xs-12 opaque">
-       <h1 class="text-center">How about having some <span ng-bind="currentfood.name">...food</span>
-         <small>
-         <span ng-hide="currentfood.creator == undefined">
-           (Added by <span ng-bind="currentfood.creator"></span>)
-         </span>
-         </small>
-       </h1>
-    </div>
-  </div>
-  <div class="row topmargin">
-    <div class="col-sm-6 column">
-      <div class="next btn wide" ng-click="next()">
-        <form>
-          <label>Don't like it?</label>
-        <button type="submit" class="btn btn-success btn-lg btn-block">
-           Next...
-        </button>
-        </form>
-      </div>
-    </div>
-    <div class="col-sm-6 column"> 
-      <div class="add btn wide">
-        <form>
-          <div id="food-group" class="form-group">
-            <label ng-show="loginStatus != 'connected'">Don't see your favorite? Add it here</label>
-            <label ng-show="loginStatus == 'connected'">
-              <span ng-bind="user.first_name"></span>, 
-              your food will be credited to you
-            </label>
-            <input type="text" name="food" class="form-control" placeholder="Mac and Cheese">
-        </div>
-  
-          <button type="submit" class="btn btn-success btn-lg btn-block" ng-click="login()" ng-hide="loginStatus == 'connected'">
-            Login with Facebook first
-        </button>
-        <button type="submit" class="btn btn-success btn-lg btn-block" ng-click="add()" ng-show="loginStatus == 'connected'">
-           Add
-        </button>
-        </form>
-      </div>
-    </div>
-  </div>
-
-  <div id="why" class="row pad">
-    <div class="col-xs-12 opaque">
-       <h1 class="text-center">why
-       </h1>
-       <p>
-      Food selection is pretty much always a series of "how about this" and "how about that". The answer per dish is yes or no. This app simply makes the suggestion more varied than your brain could ever do. 
-       </p>
-       <p>
-Later down the line, I'll add a bit of fuzzy logic that prefers your personal favorites, while still suggesting now and then some novelties. 
-      </p>
-      <p>
-Hope you like it. 
-      </p>
-      <p>
-... And code contributions welcome. Contact me in twitter: anttitevanlinna is my nick. 
-      </p>
-    </div>
-  </div>
-
-  <div id="code" class="row pad">
-    <div class="col-xs-12 opaque">
-       <h1 class="text-center">Code</h1>
-       <p>
-This app is simple .js code. You can find it in: 
-      <a href="https://github.com/anttitevanlinna/whattoeat">https://github.com/anttitevanlinna/whattoeat</a>. Additionally, a Hekoku account, Travis CI, and a small MongoDb is used. 
-      </p>
-    </div>
-  </div>
-
-    <div id="backlog" class="row pad">
-    <div class="col-xs-12 opaque">
-       <h1 class="text-center">The todos</h1>
-        <ul class="">
-          <li>Yep - I'll have this button</li>
-          <li>Make it work with the bloody ie</li>
-          <li>Simple logic to prefer some foods over others</li>
-          <li>Admin so that I can moderate (remove) the stinking foods</li>
-        </ul>
-      </div>
-  </div>
-
   </div>
 </body>
 </html>
