food layout fix

--- a/public/food.html
+++ b/public/food.html
@@ -11,7 +11,7 @@
 </div>
 
 <div class="row pad">
-  <div class="col-xs-12 opaque">
+  <div class="col-xs-12">
     <a href="#" type="submit" class="btn btn-success btn-lg btn-block">
       Back
     </a>
