rename to domain name

--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,9 @@
 <!doctype html><html lang="en" id="ng-app" ng-app="foods">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<title>The whattoeat App</title>
+  <title>The whaddaeat App</title>
 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular.js"></script>
@@ -36,7 +36,7 @@
   <nav id="home" class="navbar navbar-top">
       <div>
         <ul class="nav navbar-nav navbar-nav-heavy">
-          <li><a href="#home">The whattoeat app</a></li>
+          <li><a href="#home">The whaddaeat app</a></li>
           <li><a href="#why">Why</a></li>
           <li><a href="#code">Code</a></li>
         </ul>
