--- a/public/code.html
+++ b/public/code.html
@@ -1,23 +1,23 @@
-  <div id="code" class="row pad">
-    <div class="col-xs-12 opaque">
-       <h1 class="text-center">Code</h1>
-       <p>
-          This app is simple .js code. You can find it in: 
-          <a href="https://github.com/anttitevanlinna/whattoeat">
-            https://github.com/anttitevanlinna/whattoeat
-          </a>.
-          Additionally, an AWS account, Travis CI, and a small MongoDb is used. There's small-scale analytics and application monitoring in place too. The code is automatically deployed upon all pushes to master.
-      </p>
-    </div>
+<div id="code" class="row pad">
+  <div class="col-xs-12 opaque">
+     <h1 class="text-center">Code</h1>
+     <p>
+        This app is simple .js code. You can find it in: 
+        <a href="https://github.com/anttitevanlinna/whattoeat">
+          https://github.com/anttitevanlinna/whattoeat
+        </a>.
+        Additionally, an AWS account, AWS OpsWorks, Travis CI, and a small MongoDb is used. There's small-scale analytics and application monitoring in place too. The code is automatically deployed upon all pushes to master.
+    </p>
   </div>
+</div>
 
-  <div id="backlog" class="row pad">
-    <div class="col-xs-12 opaque">
-       <h1 class="text-center">The todos</h1>
-        <ul class="">
-          <li>Yep - I'll have this button that does something sensible</li>
-          <li>Make it work with the bloody ie</li>
-          <li>Simple logic to prefer some foods over others</li>
-        </ul>
-      </div>
-  </div>
+<div id="backlog" class="row pad">
+  <div class="col-xs-12 opaque">
+     <h1 class="text-center">The todos</h1>
+      <ul class="">
+        <li>Yep - I'll have this button that does something sensible</li>
+        <li>Make it work with the bloody ie</li>
+        <li>Simple logic to prefer some foods over others</li>
+      </ul>
+    </div>
+</div>
