--- a/public/food.html
+++ b/public/food.html
@@ -17,3 +17,21 @@
     </a>
   </div>
 </div>
+
+<div ng-repeat="food in foodlist.hits">
+  <div class="row pad">
+    <div class="col-md-4 col-xs-12">
+      <img class="img-thumbnail" ng-src="{{food.recipe.image}}">
+    </div>
+    <div class="col-md-8 col-xs-12 opaque" >
+      <div class="container">
+        <h1>
+          {{food.recipe.label}}
+        </h1>
+        <p class="text-center">
+          <a class="btn btn-lg btn-primary" href="#" role="button">To the Recipe</a>
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
