--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
 
   <script src="/js/angular-fb.js"></script>
   <script src="/js/main.js"></script>
+  <script src="/js/foodcontroller.js"></script>
 
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -29,7 +30,7 @@
   <link rel="stylesheet" href="/css/all.css"/>
 </head>
 
-<body ng-controller="mainController">
+<body>
 
 <div class="container-fluid">
   <nav id="home" class="navbar navbar-top">
