--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,8 @@
   <script src="/js/main.js"></script>
   <script src="/js/foodcontroller.js"></script>
 
+  <link rel="stylesheet" href="/css/all.css"/>
+
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -27,18 +29,17 @@
     ga('create', 'UA-71351556-1', 'auto');
     ga('send', 'pageview');
   </script>
-  <link rel="stylesheet" href="/css/all.css"/>
 </head>
 
 <body>
 
 <div class="container-fluid">
-  <nav id="home" class="navbar navbar-top">
+  <nav id="home" class="navbar navbar-top" style="margin-bottom:5px; padding-top:5px">
       <div>
         <ul class="nav navbar-nav navbar-nav-heavy">
-          <li><a href="#home">The whaddaeat app</a></li>
-          <li><a href="#why">Why</a></li>
-          <li><a href="#code">Code</a></li>
+          <li><a href="#home" style="padding-top:3px; padding-bottom:3px">The whaddaeat app</a></li>
+          <li><a href="#why" style="padding-top:3px; padding-bottom:3px">Why</a></li>
+          <li><a href="#code" style="padding-top:3px; padding-bottom:3px">Code</a></li>
         </ul>
      </div>
   </nav>      
